# NeoMatrix

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  pyproject.toml  test.py
.env/: pyvenv.cfg
examples/: LinearRegression.py  NeuralNetwork.py
examples/datasets/: linearreg.csv  linearreg_val.csv  sinx.csv  sinx_val.csv
neomatrix/: AGENTS.md  __init__.py  _backend.pyi  layers.py  losses.py  metrics.py  model.py  neuralnetwork.py  optimizers.py  test.py  utils.py
neomatrix-core/: AGENTS.md  Cargo.toml
neomatrix-core/src/: errors.rs  lib.rs
neomatrix-core/src/layers/: activations.rs  dense.rs  init.rs  mod.rs
neomatrix-core/src/math/: activations.rs  losses.rs  matmul.rs  mod.rs
neomatrix-core/src/optimizers/: adagrad.rs  gradient_descent.rs  mod.rs  momentum_gd.rs
neomatrix-core/src/tensor/: mod.rs  tensor.rs  tensor_ops.rs
neomatrix-core/src/test/: activations_test.rs  init_test.rs  layers_test.rs  losses_test.rs  matmul_test.rs  mod.rs  optimizers_test.rs  tensor_test.rs
neomatrix-python-wrapper/: AGENTS.md  Cargo.toml
neomatrix-python-wrapper/src/: lib.rs  losses_bindings.rs  tensor.rs  tensor_iter.rs
neomatrix-python-wrapper/src/layer_bindings/: activations.rs  dense.rs  init.rs  mod.rs
neomatrix-python-wrapper/src/optimizer_bindings/: adagrad.rs  gradient_descent.rs  mod.rs  momentum_gd.rs
neomatrix-python-wrapper/src/tensor_bindings/: mod.rs  tensor.rs  tensor_iter.rs
neomatrix/core/: AGENTS.md  __init__.py  model.py  neuralnetwork.py  optimizer.py
neomatrix/utils/: __init__.py  dataset.py
src/: lib.rs  optimization.rs  tests.rs
src/functions/: AGENTS.md  activation.rs  cost.rs  mod.rs
src/structures/: AGENTS.md  layer.rs  mod.rs  tenosor_iter.rs  tensor.rs  tensor_iter.rs  tensor_ops.rs
src/test/: mod.rs  tensor_test.rs
src/utils/: matmul.rs  mod.rs  weights_biases.rs
test/: conftest.py  test_layers.py  test_losses.py  test_metrics.py  test_model.py  test_optimizers.py  test_tensor.py  test_utils.py
tests/: activation_func.py  tensor_methods.py
