[package]
name = "neomatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neomatrix"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
pyo3 = "0.24.0"
numpy = "0.24.0"
rand = "0.9"