[package]
name = "rustybrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustybrain"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "*", features = ["rayon"] }
pyo3 = { version = "*", features = ["auto-initialize"] }
numpy = "*"
rand = "*"
