[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "neomatrix"
description = "ML framework with rust backend"
requires-python = ">=3.8"
dependencies = [
    "dataclasses",
    "numpy",
    "pandas",
    "loguru",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "neomatrix._backend"
manifest-path = "neomatrix-python-wrapper/Cargo.toml"
python-source = "."

[tool.uv]
cache-keys = [
	{ file = "pyproject.toml" },
	{ file = "Cargo.toml" },
	{ file = "**/*.rs" }
]
dev-dependencies = [
    "maturin>=1.8",
    "pytest",
]
