[package]
name = "neomatrix-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neomatrix_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "*", features = ["rayon"] }
ndarray-rand = "*"
rand = "*"
thiserror = "*"
