[package]
name = "neomatrix-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "neomatrix_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray = { version = "*", features = ["rayon", "blas"] }
ndarray-rand = "*"
rand = "*"
thiserror = "*"
openblas-src = { version = "*", features = ["static"] }
blas-src = { version = "*", features = ["openblas"] }
