[package]
name = "neomatrix-python-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
neomatrix_core = { path = "../neomatrix-core", package = "neomatrix-core" }
numpy = "*"
ndarray = { version = "*", features = ["rayon", "blas"] }
rand = "*"
openblas-src = { version = "*", features = ["static"] }
blas-src = { version = "*", features = ["openblas"] }
